bin_PROGRAMS = horgand
horgand_SOURCES = main.C \
        organ.C \
	organDSPEffects.C \
	organAudioOut.C \
	organMIDIIn.C \
	organAccompaniment.C \
	organvarios.C \
	organFileIO.C \
	jackoutput.C \
	jackmidi.C \
        HORGAN.cxx \
        Holrgan.h \
        jackoutput.h \
        horgand128.xpm \
        HORGAN.h 

